# wgso

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHED-CRATES  README.md  deny.toml
.github/: dependabot.yml
crates/wgso/: Cargo.toml  build.rs
crates/wgso/config/: directives.yaml
crates/wgso/examples/: main_android.rs  wgso_android.rs  wgso_web.rs
crates/wgso/src/: cli.rs  directive.rs  directive_new.rs  error.rs  fields.rs  file.rs  lib.rs  main.rs  module.rs  program.rs  resource.rs  runner.rs  storage.rs  type_.rs  wgsl.rs  wgsl_module.rs  wgsl_parsing.rs
crates/wgso/src/directive/: common.rs  compute_shader.rs  draw.rs  import.rs  imports.rs  mod.rs  render_shader.rs  run.rs  shader.rs  shader_calls.rs  shader_defs.rs  token.rs  tokens.rs
crates/wgso/src/directives/: calls.rs  defs.rs  imports.rs  mod.rs  shader_calls.rs  shader_defs.rs  toggle.rs
crates/wgso/src/program/: file.rs  mod.rs  module.rs  section.rs  type_.rs  wgsl.rs
crates/wgso/src/runner/: compute_shader.rs  gpu.rs  mod.rs  render_shader.rs  shader.rs  shader_execution.rs  shaders.rs  std.rs  target.rs  watcher.rs
crates/wgso/src_old/: directive.rs  file.rs  lib.rs  main.rs  program.rs  runner.rs  storage.rs  wgsl_module.rs  wgsl_parsing.rs
crates/wgso/tests/case_hot_reload/: draw.wgsl  init.wgsl  main.wgsl  storages.wgsl
crates/wgso/tests/cases_invalid/directive_arg_parsing/: .expected  alignment.wgsl  duplicated.wgsl  invalid_type.wgsl  invalid_type_same_name1.wgsl  invalid_type_same_name2.wgsl  missing.wgsl  unknown.wgsl  unknown_storage.wgsl  unknown_storage_field.wgsl
crates/wgso/tests/cases_invalid/directive_parsing/: .expected  invalid_header.wgsl  invalid_header2.wgsl  invalid_next_token.wgsl  main.wgsl  multiple_expected_token.wgsl  single_expected_token.wgsl  unexpected_end_of_file.wgsl
crates/wgso/tests/cases_invalid/directive_pre_validation/: .expected  duplicated_shader_name.wgsl  import.wgsl  unknown_shader_name.wgsl
crates/wgso/tests/cases_invalid/directive_shader_call_validation/: .expected  arg_alignment.wgsl  arg_duplicated.wgsl  arg_invalid_type.wgsl  arg_invalid_type_same_name.wgsl  arg_invalid_type_same_name1.wgsl  arg_invalid_type_same_name2.wgsl  arg_missing.wgsl  arg_unknown.wgsl  arg_unknown_storage.wgsl  arg_unknown_storage_field.wgsl  buffer_invalid_type.wgsl  buffer_non_array.wgsl  buffer_unknown_storage.wgsl  buffer_unknown_storage_field.wgsl  common.wgsl  vertex_buffer_invalid_type.wgsl  vertex_buffer_non_array.wgsl  vertex_buffer_unknown_storage.wgsl  vertex_buffer_unknown_storage_field.wgsl
crates/wgso/tests/cases_invalid/directive_shader_def_validation/: .expected  buffer_type_incompatible.wgsl  buffer_type_unknown.wgsl  vertex_type_incompatible.wgsl  vertex_type_unknown.wgsl
crates/wgso/tests/cases_invalid/directive_toggle_validation/: .expected  invalid_toggles.wgsl
crates/wgso/tests/cases_invalid/directive_validation/: .expected  unknown_shader_name.wgsl
crates/wgso/tests/cases_invalid/duplicated_buffers/: .expected  in_different_file_1.wgsl  inside_same_file.wgsl
crates/wgso/tests/cases_invalid/duplicated_run_params/: .expected  shader.wgsl
crates/wgso/tests/cases_invalid/duplicated_shaders/: .expected  in_different_file.wgsl  inside_same_file.wgsl  shader1.wgsl
crates/wgso/tests/cases_invalid/invalid_priority/: .expected  root.wgsl
crates/wgso/tests/cases_invalid/invalid_run_arg_alignment/: .expected  root.wgsl
crates/wgso/tests/cases_invalid/invalid_run_arg_type/: .expected  same_type_name2.wgsl
crates/wgso/tests/cases_invalid/invalid_uniform_param_type/: .expected  compute_shader.wgsl  same_type_name1.wgsl
crates/wgso/tests/cases_invalid/invalid_wgsl_with_imports/: .expected  importer.wgsl  invalid.wgsl
crates/wgso/tests/cases_invalid/invalid_workgroup_count/: .expected  root.wgsl
crates/wgso/tests/cases_invalid/missing_uniform_param/: .expected  compute_shader.wgsl
crates/wgso/tests/cases_invalid/too_large_buffer/: .expected  main.wgsl
crates/wgso/tests/cases_invalid/undefined_run_params/: .expected  compute_shader.wgsl
crates/wgso/tests/cases_invalid/undefined_uniform_value/: .expected  compute_shader.wgsl
crates/wgso/tests/cases_invalid/uniform_conflicting_usage/: compute_shader.wgsl
crates/wgso/tests/cases_invalid/unknown_imports/: .expected  root.wgsl
crates/wgso/tests/cases_invalid/unknown_run_arg_field/: .expected  root.wgsl
crates/wgso/tests/cases_invalid/unknown_run_shader/: .expected  root.wgsl
crates/wgso/tests/cases_invalid/unsupported_wsgl_feature/: .expected  override_constants.wgsl
crates/wgso/tests/cases_invalid/wgpu_buffer_validation/: .expected  main.wgsl
crates/wgso/tests/cases_invalid/wgpu_shader_runtime_validation/: .expected  main.wgsl
crates/wgso/tests/cases_invalid/wgpu_shader_validation/: .expected  main.wgsl
crates/wgso/tests/cases_invalid/wgpu_storage_runtime_validation/: .expected  main.wgsl
crates/wgso/tests/cases_invalid/wgsl_compilation/: .expected  error_in_import.wgsl  imported_error.wgsl  override_constants.wgsl  validation.wgsl
crates/wgso/tests/cases_invalid/wgsl_validation_error/: .expected  imported.wgsl  other_error.wgsl  root.wgsl
crates/wgso/tests/cases_valid/compute_shader/: orchestrator.wgsl  shader.wgsl
crates/wgso/tests/cases_valid/compute_shaders/: .expected  shader.wgsl
crates/wgso/tests/cases_valid/imports/: .expected  root.wgsl  shader.wgsl
crates/wgso/tests/cases_valid/init_shaders/: .expected  orchestrator.wgsl
crates/wgso/tests/cases_valid/inner_folders/: .expected
crates/wgso/tests/hot_reload/: main.rs
crates/wgso/tests/integration/: draw.rs  examples.rs  hot_reload.rs  invalid_cases.rs  io_errors.rs  main.rs  runner.rs  toggle.rs  valid_cases.rs
crates/wgso_deps/: Cargo.toml
crates/wgso_deps/src/: config.rs  dependencies.rs  errors.rs  lib.rs
crates/wgso_deps/tests/integration/: main.rs
crates/wgso_parser/: Cargo.toml
crates/wgso_parser/src/: errors.rs  lib.rs  parsing.rs  rules.rs
crates/wgso_parser/tests/integration/: invalid_cases.rs  main.rs  valid_cases.rs
(+231 files in other folders)
