[package]
name = "wgso"
description = "WebGPU Shader Orchestrator to create GPU-native applications"
readme = "../../README.md"
keywords = ["gpu", "rendering", "compute", "shader", "wgsl"]
categories = ["game-development", "graphics", "rendering", "concurrency"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
fxhash.workspace = true
futures.workspace = true
itertools.workspace = true
naga.workspace = true
regex.workspace = true
strip-ansi-escapes.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl", "wgsl"] }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
