[package]
name = "wgso"
description = "WebGPU Shader Orchestrator to create GPU-native applications"
readme = "../../README.md"
keywords = ["gpu", "rendering", "compute", "shader", "wgsl"]
categories = ["game-development", "graphics", "rendering", "concurrency"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
fxhash.workspace = true
futures.workspace = true
itertools.workspace = true
logos.workspace = true
naga.workspace = true
strip-ansi-escapes.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true, features = ["rwh_05"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true
winit = { workspace = true, features = ["android-native-activity", "rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl", "wgsl"] }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
