[package]
name = "wgso"
description = "WebGPU Shader Orchestrator to run GPU-native applications"
readme = "../../README.md"
keywords = ["gpu", "rendering", "compute", "shader", "wgsl"]
categories = ["game-development", "graphics", "rendering", "concurrency"]
exclude = [".github", "README.md"]
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
futures.workspace = true
fxhash.workspace = true
itertools.workspace = true
naga.workspace = true
notify.workspace = true
strip-ansi-escapes.workspace = true
walkdir.workspace = true

wgso_deps.workspace = true
wgso_parser.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true, features = ["rwh_05"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true
include_dir.workspace = true
winit = { workspace = true, features = ["android-native-activity", "rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl", "wgsl"] }

[dev-dependencies]
rstest.workspace = true

[package.metadata.android]
build_targets = ["armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[[example]]
name = "wgso_android"
path = "examples/main_android.rs"
crate-type = ["cdylib"]

[lints]
workspace = true
